[tool.poetry]
name = "aws-error-utils"
version = "1.2.0"
description = "Error-handling functions for boto3/botocore"
authors = ["Ben Kehoe"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/benkehoe/aws-error-utils"
repository = "https://github.com/benkehoe/aws-error-utils"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.5"
botocore = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
